--- a/assets/index.html
+++ b/assets/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Editor1</title>
-  <script src="/main.js"></script>
+  <title>{{title}}</title>
+  <script src="{{main_js_url}}"></script>
   <style>
     html,
     body {
