--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,8 @@
   <script src="{{main_js_url}}"></script>
   <style>
     :root {
-      --background-color: rgb(146, 146, 146);
+      /* --background-color: rgb(146, 146, 146); */
+      --background-color: rgb(214, 214, 214);
     }
 
     html,
