refactored out main css

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,132 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{title}}</title>
   <script src="{{main_js_url}}"></script>
-  <style>
-    :root {
-      /* --background-color: rgb(146, 146, 146); */
-      --background-color: rgb(214, 214, 214);
-    }
-
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-
-      background-color: var(--background-color);
-    }
-
-    .Expr {
-      padding: 0.5em;
-
-      display: inline-flex;
-      /* display: flex; */
-      flex-direction: row;
-      /* align-items: center; */
-      align-items: stretch;
-      /* gap: 0.5em; */
-
-      box-shadow: 0 0 0 1px black inset;
-
-      user-select: none;
-      cursor: pointer;
-
-      background-color: transparent;
-      transition-property: background-color;
-      transition-duration: 0.2s;
-    }
-
-    .Expr.ping {
-      background-color: color-mix(in hsl, blue, transparent 50%);
-      transition-duration: 0;
-    }
-
-    .ExprLabel {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-    }
-
-    .Point {
-      white-space: pre;
-      width: 1em;
-      /* height: 100%; */
-      background-color: transparent;
-
-      transition-property: background-color;
-      transition-duration: 0.2s;
-    }
-
-    .Point.PointCursor {
-      background-color: color-mix(in hsl, blue, transparent 50%);
-    }
-
-    .Point.CursorLeft {
-      background-color: color-mix(in hsl, blue, transparent 50%);
-    }
-
-    .Point.CursorLeft~* {
-      background-color: color-mix(in hsl, blue, transparent 80%);
-    }
-
-    .Point.CursorRight {
-      background-color: color-mix(in hsl, blue, transparent 50%);
-    }
-
-    .Point.CursorRight~* {
-      background-color: transparent;
-    }
-
-    .Console {
-      font-family: monospace;
-      white-space: pre-wrap;
-    }
-
-    .Console>.Header {}
-
-    .Console>.Body {}
-
-    .ConsoleMessage {
-      box-shadow: 0 0 0 1px black;
-
-      display: flex;
-      flex-direction: row;
-    }
-
-    .ConsoleMessageLabel {
-      flex: 0 0;
-
-      background-color: black;
-      color: white;
-
-      padding: 0.5em;
-      min-width: 10em;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-    }
-
-    .ConsoleMessageError>.ConsoleMessageLabel {
-      color: red;
-    }
-
-    .ConsoleMessageBody {
-      flex: 1 1;
-      padding: 0.5em;
-      min-width: 0;
-      background-color: transparent;
-      transition-property: background-color;
-      transition-duration: 0.5s;
-    }
-
-    .ConsoleMessageError>.ConsoleMessageBody {
-      background-color: rgb(255, 196, 196);
-    }
-
-    .ConsoleMessageBody.new {
-      background-color: color-mix(in hsl, blue, transparent 50%);
-    }
-  </style>
+  <link rel="stylesheet" href="{{main_css_url}}">
 </head>
 
 </html>
